# HackIL

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/backend/: server.py
app/frontend/: next.config.mjs  package-lock.json  package.json
data/: build_dataset.py  build_fusion_dataset.py  filter_dataset.py  nni_getter.py  precompute_predictions.py  prnt_metadata.py  sentinel2_getter.py  soil_weather_getter.py
data/processed/: training_dataset.csv  training_dataset_filtered.csv  training_dataset_fusion.csv
data/processed/fusion/: soil_weather_features.csv
data/processed/nni/: plot_nni.csv
data/processed/predictions/: proximal_sensing.csv  trial_33.geojson  trial_34.geojson  trial_37.geojson  trial_40.geojson  trial_41.geojson  trial_42.geojson  trial_43.geojson
data/processed/remote_sensing/: s2_trial33_IA_Crawford_2016.geojson  s2_trial34_IA_Story_2016.geojson  s2_trial37_IN_Loam_2016.geojson  s2_trial40_MN_Waseca_2016.geojson  s2_trial41_MO_Bradford_2016.geojson  s2_trial42_MO_Loess_2016.geojson  s2_trial43_MO_Troth_2016.geojson  s2_trial44_ND_Amenia_2016.geojson  s2_trial45_ND_Durbin_2016.geojson  s2_trial46_NE_Kyes_2016.geojson  s2_trial47_NE_SCAL_2016.geojson  s2_trial48_WI_Lorenzo_2016.geojson  (+1 more)
models/fusion/: LogisticRegression_clf.pkl
models/remote_sensing/: LogisticRegression_clf.pkl
notebooks/: image_data_analysis.ipynb  modelTraining.ipynb  storing_predictions.ipynb  train_models.ipynb
pipelines/fusion/: train_models.py
pipelines/remote/: train_models.py
utils/: image_models.py
(+6 files in other folders)
